--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,15 +7,16 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
+  <li *ngIf="!authService.isLoggedIn">
+    <h2><a (click)="authService.login()">Login</a></h2>
   </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+  <li *ngIf="authService.isLoggedIn">
+    <h2><a (click)="authService.logout()">Logout</a></h2>
   </li>
 </ul>
+
+{{ authService.accessToken | json }}
+
+{{ authService.userProfile | json }}
 
 <router-outlet></router-outlet>
