Add layout for components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,7 +13,7 @@
     </nav>
   </div>
 </div>
-<div class="container">
+<div class="container main-container">
   <chat-chat *ngIf="isLoggedIn"></chat-chat>
   <chat-not-logged-in *ngIf="!isLoggedIn"></chat-not-logged-in>
 </div>
