--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,9 @@
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .nav-bg {
   background-color: #4D5C6D;
 
@@ -16,4 +22,9 @@
       color: white;
     }
   }
+}
+
+.main-container {
+  position: relative;
+  flex-grow: 1;
 }
