--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,3 +1,12 @@
-<p>
-  chat works!
-</p>
+
+<div class="column-left">
+  <div class="profile">
+    Profile
+  </div>
+  <div class="users">
+    Users
+  </div>
+</div>
+<div class="column-right">
+  chat
+</div>
