Add Profile component

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,7 +1,6 @@
-
 <div class="column-left">
   <div class="profile">
-    Profile
+    <chat-profile></chat-profile>
   </div>
   <div class="users">
     Users
