--- a/frontend/src/app/chat/chat.component.scss
+++ b/frontend/src/app/chat/chat.component.scss
@@ -1,3 +1,8 @@
+$profileHeight: 180px;
+$leftColumnWidth: 300px;
+$baseMargin: 10px;
+
+
 :host {
   position: absolute;
   display: flex;
@@ -6,23 +11,25 @@
 }
 
 .column-left {
-  flex-basis: 320px;
-  margin: 10px 0;
+  flex-basis: $leftColumnWidth;
+  margin: $baseMargin 0;
   display: flex;
   flex-direction: column;
 
   .profile {
-    flex-basis: 250px;
+    position: relative;
+    flex-basis: $profileHeight;
   }
 
   .users {
-    margin-top: 10px;
+    position: relative;
+    margin-top: $baseMargin;
     flex-grow: 1;
   }
 }
 
 .column-right {
-  margin: 10px 0 10px 10px;
+  margin: $baseMargin 0 $baseMargin $baseMargin;
   flex-grow: 1;
 }
 
