Fix profile component

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="column-left">
   <div class="profile">
-    <chat-profile></chat-profile>
+    <chat-profile [user]="currentUser"></chat-profile>
   </div>
   <div class="users">
     Users
