--- a/frontend/src/app/chat/profile/profile.component.scss
+++ b/frontend/src/app/chat/profile/profile.component.scss
@@ -2,6 +2,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
   background-color: #4D5C6D;
