Add user list component

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -3,7 +3,7 @@
     <chat-profile [user]="currentUser"></chat-profile>
   </div>
   <div class="users">
-    Users
+    <chat-user-list [users]="activeUsers"></chat-user-list>
   </div>
 </div>
 <div class="column-right">
