--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="column-right">
   <div class="messages">
-    messages
+    <chat-message-list [messages]="messages"></chat-message-list>
   </div>
   <div class="message-input">
     <chat-message-input (textSent)="sendMessage($event)"></chat-message-input>
