--- a/frontend/src/app/chat/message-list/message-list.component.html
+++ b/frontend/src/app/chat/message-list/message-list.component.html
@@ -1,3 +1,8 @@
-<ng-container *ngFor="let message of messages">
-  <chat-message [message]="message"></chat-message>
-</ng-container>
+<div #scrolledArea
+     chatScrollTop
+     class="message-list"
+     (scrolledUp)="onScrollUp()">
+  <ng-container *ngFor="let message of messages">
+    <chat-message [message]="message"></chat-message>
+  </ng-container>
+</div>
