--- a/frontend/src/app/chat/message-list/message-list.component.scss
+++ b/frontend/src/app/chat/message-list/message-list.component.scss
@@ -3,8 +3,9 @@
   height: 100%;
   width: 100%;
   background-color: #4D5C6D;
+}
+
+.message-list {
+  height: 100%;
   overflow-y: auto;
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
 }
