--- a/frontend/src/app/chat/profile/profile.component.html
+++ b/frontend/src/app/chat/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="image-container">
-  <img [src]="user?.imageUrl">
+  <img [src]="user?.photoUrl">
 </div>
 <div class="name-container">
   <span>{{ user?.name }}</span>
