--- a/frontend/src/app/chat/user-list/user/user.component.html
+++ b/frontend/src/app/chat/user-list/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="user-row">
   <div>
-    <img [src]="user.imageUrl">
+    <img [src]="user.photoUrl">
   </div>
   <div class="name-container">
     <span>{{ user.name }}</span>
