--- a/frontend/src/app/chat/message-list/message/message.component.html
+++ b/frontend/src/app/chat/message-list/message/message.component.html
@@ -1,10 +1,10 @@
 <div class="message-container">
   <div class="author-image">
-    <img [src]="message.author.imageUrl">
+    <img *ngIf="message.author?.photoUrl" [src]="message.author?.photoUrl">
   </div>
   <div class="middle-part">
     <div class="author-name">
-      {{ message.author.name }}
+      {{ message.author?.name }}
     </div>
     <div class="text">
       {{ message.text }}
